--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,7 @@ dmypy.json
 .pyre/
 
 .vscode/
+mams_dataset/data/MAMS-ATSA/processed/test.npz
+mams_dataset/data/MAMS-ATSA/processed/train.npz
+mams_dataset/data/MAMS-ATSA/processed/val.npz
+mams_dataset/data/glove.840B.300d.txt
